@@ -48,6 +48,7 @@ Current Version: Public Release 1.4
 	  * Size and speed over portability chosen for the loading of CurrAddress from the new address in the V2P_RunStateMachine recieved packet
 	  * System clock prescaling removed; buggy and wouldn't reduce power consumption anyway
 	  * USI transfer routine re-written in ASM for maximum transfer speed
+	  * OSCCAL routine changed over to a polled method rather than an interrupt method for optimal calibration
 
 	IN PUBLIC RELEASE 1.3:
 	=======================================
